alterado: daos alterados para colocar o projeto por padrão na pasta C: ;  csvs colocados em uma pasta; controllers corrigidos (Tinha import de view - fora do padrão mvc); views agora são organizadas por menus separados; E Implementado com limpar console pra deixar bonito :)